sys/prebuilt-bindings/geos_3.11.rs

extern "C" {
    #[doc = " \\see GEOSGeom_createEmptyCollection"]
    pub fn GEOSGeom_createEmptyCollection_r(
        handle: GEOSContextHandle_t,
        type_: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_createRectangle"]
    pub fn GEOSGeom_createRectangle_r(
        handle: GEOSContextHandle_t,
        xmin: f64,
        ymin: f64,
        xmax: f64,
        ymax: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_clone"]
    pub fn GEOSGeom_clone_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_destroy"]
    pub fn GEOSGeom_destroy_r(handle: GEOSContextHandle_t, g: *mut GEOSGeometry);
}
extern "C" {
    #[doc = " \\see GEOSEnvelope"]
    pub fn GEOSEnvelope_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry)
        -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSIntersection"]
    pub fn GEOSIntersection_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSIntersectionPrec"]
    pub fn GEOSIntersectionPrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSConvexHull"]
    pub fn GEOSConvexHull_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSConcaveHull"]
    pub fn GEOSConcaveHull_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        ratio: f64,
        allowHoles: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPolygonHullSimplify"]
    pub fn GEOSPolygonHullSimplify_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        isOuter: libc::c_uint,
        vertexNumFraction: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPolygonHullSimplifyByArea"]
    pub fn GEOSPolygonHullSimplifyMode_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        isOuter: libc::c_uint,
        parameterMode: libc::c_uint,
        parameter: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSConcaveHullOfPolygons"]
    pub fn GEOSConcaveHullOfPolygons_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        lengthRatio: f64,
        isTight: libc::c_uint,
        isHolesAllowed: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSMinimumRotatedRectangle"]
    pub fn GEOSMinimumRotatedRectangle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSMaximumInscribedCircle"]
    pub fn GEOSMaximumInscribedCircle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSLargestEmptyCircle"]
    pub fn GEOSLargestEmptyCircle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        boundary: *const GEOSGeometry,
        tolerance: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSMinimumWidth"]
    pub fn GEOSMinimumWidth_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSMinimumClearanceLine"]
    pub fn GEOSMinimumClearanceLine_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSMinimumClearance"]
    pub fn GEOSMinimumClearance_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        distance: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSDifference"]
    pub fn GEOSDifference_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSDifferencePrec"]
    pub fn GEOSDifferencePrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSSymDifference"]
    pub fn GEOSSymDifference_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSSymDifferencePrec"]
    pub fn GEOSSymDifferencePrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSBoundary"]
    pub fn GEOSBoundary_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry)
        -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSUnion"]
    pub fn GEOSUnion_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSUnionPrec"]
    pub fn GEOSUnionPrec_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        gridSize: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSUnaryUnion"]
    pub fn GEOSUnaryUnion_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSUnaryUnionPrec"]
    pub fn GEOSUnaryUnionPrec_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        gridSize: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSCoverageUnion"]
    pub fn GEOSCoverageUnion_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPointOnSurface"]
    pub fn GEOSPointOnSurface_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGetCentroid"]
    pub fn GEOSGetCentroid_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSMinimumBoundingCircle"]
    pub fn GEOSMinimumBoundingCircle_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        radius: *mut f64,
        center: *mut *mut GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSNode"]
    pub fn GEOSNode_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSClipByRect"]
    pub fn GEOSClipByRect_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        xmin: f64,
        ymin: f64,
        xmax: f64,
        ymax: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPolygonize"]
    pub fn GEOSPolygonize_r(
        handle: GEOSContextHandle_t,
        geoms: *const *const GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPolygonize_valid"]
    pub fn GEOSPolygonize_valid_r(
        handle: GEOSContextHandle_t,
        geoms: *const *const GEOSGeometry,
        ngems: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPolygonizer_getCutEdges"]
    pub fn GEOSPolygonizer_getCutEdges_r(
        handle: GEOSContextHandle_t,
        geoms: *const *const GEOSGeometry,
        ngeoms: libc::c_uint,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSPolygonize_full"]
    pub fn GEOSPolygonize_full_r(
        handle: GEOSContextHandle_t,
        input: *const GEOSGeometry,
        cuts: *mut *mut GEOSGeometry,
        dangles: *mut *mut GEOSGeometry,
        invalidRings: *mut *mut GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSBuildArea"]
    pub fn GEOSBuildArea_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSLineMerge"]
    pub fn GEOSLineMerge_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSLineMergeDirected"]
    pub fn GEOSLineMergeDirected_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSReverse"]
    pub fn GEOSReverse_r(handle: GEOSContextHandle_t, g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSSimplify"]
    pub fn GEOSSimplify_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSTopologyPreserveSimplify"]
    pub fn GEOSTopologyPreserveSimplify_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSGeom_extractUniquePoints"]
    pub fn GEOSGeom_extractUniquePoints_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSSharedPaths"]
    pub fn GEOSSharedPaths_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSSnap"]
    pub fn GEOSSnap_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
        tolerance: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSDelaunayTriangulation"]
    pub fn GEOSDelaunayTriangulation_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        tolerance: f64,
        onlyEdges: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSConstrainedDelaunayTriangulation"]
    pub fn GEOSConstrainedDelaunayTriangulation_r(
        handle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSVoronoiDiagram"]
    pub fn GEOSVoronoiDiagram_r(
        extHandle: GEOSContextHandle_t,
        g: *const GEOSGeometry,
        env: *const GEOSGeometry,
        tolerance: f64,
        onlyEdges: libc::c_int,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " \\see GEOSSegmentIntersection"]
    pub fn GEOSSegmentIntersection_r(
        extHandle: GEOSContextHandle_t,
        ax0: f64,
        ay0: f64,
        ax1: f64,
        ay1: f64,
        bx0: f64,
        by0: f64,
        bx1: f64,
        by1: f64,
        cx: *mut f64,
        cy: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " \\see GEOSDisjoint"]
    pub fn GEOSDisjoint_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSTouches"]
    pub fn GEOSTouches_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSIntersects"]
    pub fn GEOSIntersects_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSCrosses"]
    pub fn GEOSCrosses_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
extern "C" {
    #[doc = " \\see GEOSWithin"]
    pub fn GEOSWithin_r(
        handle: GEOSContextHandle_t,
        g1: *const GEOSGeometry,
        g2: *const GEOSGeometry,
    ) -> libc::c_char;
}
